--- a/cats-incorpurrate/src/components/catlist.module.css
+++ b/cats-incorpurrate/src/components/catlist.module.css
@@ -35,6 +35,7 @@
   text-align: center;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: inherit;
+  color: black;
 
 }
 
@@ -51,6 +52,7 @@
   text-align: center;
   padding: 5px;
   line-height: 0.6;
+  color: black;
 }
 
 @media only screen and (max-width: 768px) {
