--- a/cats-incorpurrate/src/styles/Home.module.css
+++ b/cats-incorpurrate/src/styles/Home.module.css
@@ -92,6 +92,7 @@
   margin: 30px auto;
   text-align: center;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 1.0);
+  color:black;
 }
 
 .pointingFinger {
